Home page display on mobile devices fix.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3670,6 +3670,11 @@ li.pingback:first-child {
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; 
 }
 
+@media (max-width: 991px) {
+    .feature-panel {
+        background: none !important;
+    }
+}
 
 /*
 ATTENTION:
